# pfc-convert

./: .gitignore  CHANGELOG.md  README.md  VERSION.txt  pfc_convert.py  pyproject.toml
tests/: test_pfc_convert.py  test_pfc_convert_hard.py
